fix about and blog page alignment

--- a/style.css
+++ b/style.css
@@ -308,6 +308,7 @@ a.footnote-link {
     .bio {
         margin: 0;
         padding-top: 0;
+        padding-right: 0;
     }
 
     .content {
